--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "dotenv": "^16.3.1",
-    "tough-cookie": "^6.0.0"
+    "garmin-connect": "^1.6.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
