--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "garmin-workout-editor",
   "version": "1.0.0",
-  "description": "Extract Garmin activities and update workouts using AI",
+  "description": "Extract Garmin activities and manage workouts",
   "main": "dist/index.js",
+  "bin": {
+    "export-activities": "dist/exportActivities.js",
+    "manage-workouts": "dist/manageWorkouts.js"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/index.ts",
     "start": "node dist/index.js",
-    "extract-activities": "ts-node src/extractActivities.ts",
+    "export-activities": "ts-node src/exportActivities.ts",
+    "manage-workouts": "ts-node src/manageWorkouts.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
