feat: Implement strict validation for workout steps and workouts
- Added type guards for valid step types, end conditions, and target types.
- Implemented detailed validation logic for each workout step, including checks for required fields, value types, and interdependencies.
- Enhanced workout validation to ensure all steps are valid before upload.
- Introduced methods to fetch and transform workouts, including handling raw data and detailed workout structures.
- Added functionality to upload workouts to Garmin, including validation and error handling.
- Implemented methods for transforming raw workouts from JSON files and saving transformed data.
- Enhanced weight conversion methods and added support for weight percentages.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "garmin-connect": "^1.6.2",
+    "@flow-js/garmin-connect": "^1.6.7",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
